--- a/main.tex
+++ b/main.tex
@@ -2,6 +2,7 @@
 
 \usepackage{amsmath, amssymb}
 
+\theoremstyle{definition}
 \newtheorem{ans}{}
 \numberwithin{ans}{subsection}
 
@@ -18,6 +19,8 @@
   % Add more content here, if needed.
 }
 
+\DeclareMathOperator{\id}{id}
+
 
 \begin{document}
 
@@ -25,11 +28,36 @@
 \fakesubsection{1.1 集合と論理の復習}
 
 \begin{ans}
-  test
+  $f: g,\ A: X,\ B: X$
 \end{ans}
 
 \begin{ans}
-  test
+  (1) $f(S) = \{3, 4\}$
+  (2) $f^{-1}(S_1) = \emptyset,\ f^{-1}(S_2) = \{1, 3, 4, 5\}$
+  (3) $f(a) = 2 (\in B)$であるような$a \in A$が存在しないので, 全射ではない.
+  (4) $f(1) = f(4)$なので, 単射ではない.
+\end{ans}
+
+\begin{ans}
+  写像$f: A \rightarrow B$について考える.
+  全射: $B$のすべての要素が集合$A$から来ている.\\
+  単射: $A$の異なる要素は$B$の異なる要素に行く.
+\end{ans}
+
+\begin{ans}
+  全射: $f(x) = x,\ x\sin x,\ x^3 - x$
+  単射: $f(x) = x,\ e^x,\ \arctan x$
+\end{ans}
+
+\begin{ans}
+  (逆写像$\Rightarrow$全単射) $f \circ g = \id_B$が全射なので, 次問より, $f$は全射.
+  同様に$g \circ f = \id_A$が単射なので, $f$は単射.\\
+  (全単射$\Rightarrow$逆写像)
+  $b \in B$を任意に取ると, $f$の全射性から$f(a) = b$なる$a \in A$がある.
+  しかも$f$の単射性により, このような$a$は一意である.
+  そこで$g: B \rightarrow A$を$g(b) = a$と定めれば,
+  $f \circ g(b) = f(a) = b$, $g \circ f(a) = g(b) = a$
+  が成り立つので, $f \circ g = \id_B$, $g \circ f = \id_A$.
 \end{ans}
 
 \fakesubsection{1.2 well-definedと自然な対象}
