--- a/main.tex
+++ b/main.tex
@@ -91,6 +91,15 @@
   任意の$b \in B$に対して$\{b\} \subset f(f^{-1}(\{b\})) \subset f(A)$.
 \end{ans}
 
+\begin{ans}
+  前問で示したように, $f(f^{-1}(S)) \subset S$なので,
+  $f^{-1}(f(f^{-1}(S))) \subset f^{-1}(S)$.
+  逆に$f^{-1}(f(f^{-1}(S))) \supset f^{-1}(S)$は次のようにして示される.
+  $a \in f^{-1}(S)$ならば, $f(a) = b,\ b \in S$となる$b$が存在する.
+  ふたたび$a \in f^{-1}(S)$より, $b \in f(f^{-1}(S))$.
+  さらに$f(a) = b$より, $a \in f^{-1}(f(f^{-1}(S)))$.
+\end{ans}
+
 \fakesubsection{1.2 well-definedと自然な対象}
 
 \fakesubsection{1.3 選択公理とツォルンの補題}
