--- a/main.tex
+++ b/main.tex
@@ -100,6 +100,17 @@
   さらに$f(a) = b$より, $a \in f^{-1}(f(f^{-1}(S)))$.
 \end{ans}
 
+\begin{ans}
+  (1) $x = 4.1$
+  (2) $A = \mathbb{N},\ B = \emptyset$
+  (3) $f: \{0, 1, 2\} \rightarrow \{0, 1\}$を
+  $f(0) = f(2) = 0,\ f(1) = 1$と定めて,
+  $S_0 = \{0, 1\},\ S_1 = \{1, 2\}$
+  とすると, $f(S_0 \cap S_1) = f(\{1\}) = \{1\}$,
+  $f(S_0) \cap f(S_1) = \{0, 1\} \cap \{0, 1\} = \{0, 1\}$.
+
+\end{ans}
+
 \fakesubsection{1.2 well-definedと自然な対象}
 
 \fakesubsection{1.3 選択公理とツォルンの補題}
