--- a/main.tex
+++ b/main.tex
@@ -108,7 +108,17 @@
   $S_0 = \{0, 1\},\ S_1 = \{1, 2\}$
   とすると, $f(S_0 \cap S_1) = f(\{1\}) = \{1\}$,
   $f(S_0) \cap f(S_1) = \{0, 1\} \cap \{0, 1\} = \{0, 1\}$.
+\end{ans}
 
+\begin{ans}
+  (1) (d).
+  $x = 4$が$A \Rightarrow B$の反例,
+  $x = 1$が$B \Rightarrow A$の反例である.
+  (2) (a).
+  $B \Rightarrow A$は真だが,
+  $x = 4$が$A \Rightarrow B$の反例である.
+  (3) (b). $A \Rightarrow B$は真だが,
+  $X = \mathbb{N},\ Y = \emptyset$が$B \Rightarrow A$の反例である
 \end{ans}
 
 \fakesubsection{1.2 well-definedと自然な対象}
