--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,7 @@
 \documentclass{amsart}
 
 \usepackage{amsmath, amssymb}
+\usepackage{commath}
 
 \theoremstyle{definition}
 \newtheorem{ans}{}
@@ -119,6 +120,16 @@
   $x = 4$が$A \Rightarrow B$の反例である.
   (3) (b). $A \Rightarrow B$は真だが,
   $X = \mathbb{N},\ Y = \emptyset$が$B \Rightarrow A$の反例である
+\end{ans}
+
+\begin{ans}
+  (1) $A$が成り立たないか$B$が成り立たない, かつ$C$が成り立たない
+  (2) $A$が成り立ち, かつ$B$も$C$も成り立たない
+  (3) $A$か$B$の一方のみが成り立つ
+  (4) 自然数$n$があって, 任意の実数$x$に対して$x \le 0$または$\frac{1}{n} \le x$が成り立つ
+  (5) ある$\varepsilon > 0$について, 任意の$\delta > 0$に対して$x, y \in [0, 1]$で
+  $\abs{x - y} < \delta$かつ$\abs{f(x) - f(y)} \ge \varepsilon$
+  を満たすものがある.
 \end{ans}
 
 \fakesubsection{1.2 well-definedと自然な対象}
