--- a/main.tex
+++ b/main.tex
@@ -2,6 +2,7 @@
 
 \usepackage{amsmath, amssymb}
 \usepackage{commath}
+\usepackage{bm}
 
 \theoremstyle{definition}
 \newtheorem{ans}{}
@@ -130,6 +131,19 @@
   (5) ある$\varepsilon > 0$について, 任意の$\delta > 0$に対して$x, y \in [0, 1]$で
   $\abs{x - y} < \delta$かつ$\abs{f(x) - f(y)} \ge \varepsilon$
   を満たすものがある.
+\end{ans}
+
+\begin{ans}
+  (1) $4 + 5 = 9 \ge 3$なので, 関係$R$がある.
+  (2) $1 + (-1) = 0 < 3$なので, 関係$R$はない.
+\end{ans}
+
+\begin{ans}
+  (1) $X = \mathbb{R},\ R = \{(x, y) \mid y = x^2\}$\\
+  (2) $X = \mathbb{Z},\ R = \{(x, y) \mid x\text{は}y\text{で割り切れる.}\}$,
+  この$R$は順序である.\\
+  (3) $X = \mathbb{R}^n\setminus\{\bm{0}\},\ R = \{(\bm{x}, \bm{y}) \mid \exists \alpha \in \mathbb{R}\setminus\{0\},\ \bm{y} = \alpha \bm{x} \}$,
+  この$R$は同値関係 (p47) である.
 \end{ans}
 
 \fakesubsection{1.2 well-definedと自然な対象}
