--- a/main.tex
+++ b/main.tex
@@ -161,6 +161,10 @@
   であることからしたがう.
 \end{ans}
 
+\begin{ans}
+  解答例にないものでは, 双対空間$V^\ast$, テンソル積$V \otimes V$など.
+\end{ans}
+
 \fakesubsection{1.3 選択公理とツォルンの補題}
 
 \end{document}
