--- a/main.tex
+++ b/main.tex
@@ -202,4 +202,12 @@
   したがって$S_0 = A$または$f_0(S_0) = B$.
 \end{ans}
 
+\fakesection{第2章 群の基本}
+\fakesubsection{2.1 群の定義}
+
+\begin{ans}
+  $1$が単位元だが$0$の逆元が存在しないので群ではない.
+  (単位元の存在に加えて結合法則が成り立つのでモノイドである.)
+\end{ans}
+
 \end{document}
