--- a/main.tex
+++ b/main.tex
@@ -210,4 +210,14 @@
   (単位元の存在に加えて結合法則が成り立つのでモノイドである.)
 \end{ans}
 
+\begin{ans}
+  $0$が単位元なので,
+  $a \in \mathbb{R}$の逆元が$b \in \mathbb{R}$であるならば,
+  $a + b + ab = 0$より$(1 + a)b = -a$が成り立つはずである.
+  ところが$a = -1$のときこの等式はどんな$b$に対しても成り立たないから,
+  $-1$の逆元は存在しない.
+  したがってこの演算では群にならない.
+  (結合法則は成り立つのでモノイドである.)
+\end{ans}
+
 \end{document}
