--- a/main.tex
+++ b/main.tex
@@ -220,4 +220,12 @@
   (結合法則は成り立つのでモノイドである.)
 \end{ans}
 
+\begin{ans}
+  略.
+\end{ans}
+
+\begin{ans}
+  $((ab)c)d = (a(bc))d = a((bc)d)$.
+\end{ans}
+
 \end{document}
