--- a/main.tex
+++ b/main.tex
@@ -228,4 +228,10 @@
   $((ab)c)d = (a(bc))d = a((bc)d)$.
 \end{ans}
 
+\begin{ans}
+  両辺に左から$a^{-1}b^{-1}$, 右から$d^{-1}$を掛けると
+  $c^{-1} = a^{-1}b^{-1}ab$.
+  この逆元をとって$c = b^{-1}a^{-1}ba$.
+\end{ans}
+
 \end{document}
