--- a/main.tex
+++ b/main.tex
@@ -234,4 +234,51 @@
   この逆元をとって$c = b^{-1}a^{-1}ba$.
 \end{ans}
 
+\begin{ans}
+  (1) $\begin{pmatrix}
+    4 & 1 & 2 & 3 \\
+    1 & 2 & 3 & 4
+  \end{pmatrix} =
+  \begin{pmatrix}
+    1 & 2 & 3 & 4 \\
+    2 & 3 & 4 & 1
+  \end{pmatrix} = (1\ 2\ 3\ 4)$ \\
+  (2) $(2\ 4)^{-1}(1\ 3)^{-1} = (2\ 4)(1\ 3)$ \\
+  (3) $\begin{pmatrix}
+    1 & 3 & 4 & 2 \\
+    4 & 2 & 3 & 1
+  \end{pmatrix}\begin{pmatrix}
+    1 & 2 & 3 & 4 \\
+    1 & 3 & 4 & 2
+  \end{pmatrix} = \begin{pmatrix}
+    1 & 2 & 3 & 4 \\
+    4 & 2 & 3 & 1
+  \end{pmatrix} = (1\ 4)$ \\
+  (4) $(2\ 4)(1\ 3)(1\ 3) = (2\ 4)$ \\
+  (5) $\begin{pmatrix}
+    1 & 2 & 3 & 4 \\
+    1 & 3 & 4 & 2
+  \end{pmatrix}\begin{pmatrix}
+    1 & 2 & 3 & 4 \\
+    4 & 1 & 2 & 3
+  \end{pmatrix}\begin{pmatrix}
+    1 & 3 & 4 & 2 \\
+    1 & 2 & 3 & 4
+  \end{pmatrix} = \begin{pmatrix}
+    4 & 3 & 1 & 2 \\
+    2 & 4 & 1 & 3
+  \end{pmatrix}\begin{pmatrix}
+    1 & 4 & 2 & 3 \\
+    4 & 3 & 1 & 2
+  \end{pmatrix}\\
+  \begin{pmatrix}
+    1 & 2 & 3 & 4 \\
+    1 & 4 & 2 & 3
+  \end{pmatrix} = \begin{pmatrix}
+    1 & 2 & 3 & 4 \\
+    2 & 4 & 1 & 3
+  \end{pmatrix} = (1\ 2\ 4\ 3)$\\
+  (6) $(2\ 4)(1\ 3)(1\ 3)(1\ 3)(2\ 4) = (2\ 4)(1\ 3)(2\ 4) = (1\ 3)(2\ 4)(2\ 4) = (1\ 3)$
+\end{ans}
+
 \end{document}
