--- a/main.tex
+++ b/main.tex
@@ -281,4 +281,14 @@
   (6) $(2\ 4)(1\ 3)(1\ 3)(1\ 3)(2\ 4) = (2\ 4)(1\ 3)(2\ 4) = (1\ 3)(2\ 4)(2\ 4) = (1\ 3)$
 \end{ans}
 
+\fakesubsection{2.2 環・体の定義}
+
+\begin{ans}
+  (1) $9 \equiv 2 \pmod{7}$より, $\overline{2}$.
+  (2) $-3 \equiv 4 \pmod{7}$より, $\overline{4}$.
+  (3) $20 \equiv 6 \pmod{7}$より, $\overline{6}$.
+  (4) $125 \equiv 6 \pmod{7}$より, $\overline{6}$.
+  (5) $4^{32} \equiv 4^{30} \cdot 4^2 \equiv 64^{10} \cdot 16 \equiv 1^{10} \cdot 16 \equiv 2 \pmod{7}$より, $\overline{2}$.
+\end{ans}
+
 \end{document}
