--- a/main.tex
+++ b/main.tex
@@ -291,4 +291,14 @@
   (5) $4^{32} \equiv 4^{30} \cdot 4^2 \equiv 64^{10} \cdot 16 \equiv 1^{10} \cdot 16 \equiv 2 \pmod{7}$より, $\overline{2}$.
 \end{ans}
 
+\begin{ans}
+  (1) $34 \cdot 21 \equiv (-5) \cdot 21 \equiv -105 \equiv 12 \pmod{39}$,
+  $12 \cdot 33 \equiv 12 \cdot (-6) \equiv -72 \equiv 6 \pmod{39}$より, $\overline{6}$
+  (2) $18 \cdot 13 = 6 \cdot 39 \equiv 0 \pmod{39}$より, $\overline{0}$.
+  (3) $16^2 \equiv 256 \equiv 22 \pmod{39}$, $16^4 = 22^2 \equiv 16 \pmod{39}$,
+  $16^8 \equiv 16^2 \equiv 22 \pmod{39}$より, $\overline{22}$.
+  (4) (3) に続けて$16^{16} \equiv 22^2 \equiv 16 \pmod{39}$, $16^{32} \equiv 16^2 \equiv 22 \pmod{39}$より,
+  $16^{34} = 16^2 \cdot 16^{32} \equiv 22 \cdot 22 \equiv 16 \pmod{39}$. よって$\overline{16}$.
+\end{ans}
+
 \end{document}
