--- a/main.tex
+++ b/main.tex
@@ -301,4 +301,18 @@
   $16^{34} = 16^2 \cdot 16^{32} \equiv 22 \cdot 22 \equiv 16 \pmod{39}$. よって$\overline{16}$.
 \end{ans}
 
+\fakesubsection{2.3 部分群と生成元}
+
+\begin{ans}
+  命題2.3.2の条件と同値であることを確かめればよい.
+  $H$が部分群であるとすると, 条件 (3) より$x^{-1} \in H$.
+  さらに条件 (2) より$x^{-1}y \in H$.
+  逆に, 群$G$の空でない部分集合$H$について
+  「$x, y \in H \Rightarrow x^{-1}y \in H$」
+  が成り立っているとする. $H$は空でないから, ある元$x_0 \in H$が存在する.
+  よって, $1_G = x_0^{-1}x_0 \in H$. すなわち条件 (1) が成り立つ.
+  $x \in H$ならば, $x, 1_G \in H$について$x^{-1} = x^{-1}1_G \in H$. すなわち条件 (2) が成り立つ.
+  $x, y \in H$ならば, $x^{-1} \in H$なので$xy = (x^{-1})^{-1}y \in H$. すなわち条件 (3) が成り立つ.
+\end{ans}
+
 \end{document}
