--- a/main.tex
+++ b/main.tex
@@ -375,4 +375,14 @@
   左下の成分がすべて$1$である行列との積は非可換である.
 \end{ans}
 
+\begin{ans}
+  $1 \in \mathbb{R}_>$,
+  また$x, y \in \mathbb{R}_>$ならば$xy \in \mathbb{R}_>$,
+  また$x \in \mathbb{R}_>$ならば$x^{-1} = \frac{1}{x} \in {R}_>$.
+\end{ans}
+
+\begin{ans}
+  $0 \notin \mathbb{R}_>$なので, 部分群ではない.
+\end{ans}
+
 \end{document}
