--- a/main.tex
+++ b/main.tex
@@ -385,4 +385,14 @@
   $0 \notin \mathbb{R}_>$なので, 部分群ではない.
 \end{ans}
 
+\begin{ans}
+  $H$の元$h$は, 絶対値が$1$なので$h = e^{i\theta}$と書ける.
+  さらに, $h^n = 1$より$\theta = \frac{2\pi m}{n}\ (m \in \mathbb{Z})$である.
+  $e^\frac{2\pi im}{n} = e^\frac{2\pi i m^\prime}{n}$が成り立つのは,
+  $m^\prime = m + kn\ (k \in \mathbb{Z})$と書けるとき, またそのときに限るので,
+  $H = \{1 = e^0, e^\frac{2\pi i}{n}, e^\frac{2\pi i \cdot 2}{n},..., e^\frac{2\pi i(n - 1)}{n}\}$.
+  よって$H$の位数は$n$.
+  また, $e^\frac{2\pi i}{n}$が生成元なので, $H$は巡回群.
+\end{ans}
+
 \end{document}
