--- a/main.tex
+++ b/main.tex
@@ -395,4 +395,9 @@
   また, $e^\frac{2\pi i}{n}$が生成元なので, $H$は巡回群.
 \end{ans}
 
+\begin{ans}
+  (1) $\mathfrak{S}_3$は可換群ではないから巡回群ではない.
+  (別解: $\mathfrak{S}_3$には位数$2$の元が$3$つあるが, 巡回群$\mathbb{Z}/6\mathbb{Z}$には$1$つしかないから, 両者は一致しない.)
+\end{ans}
+
 \end{document}
