--- a/main.tex
+++ b/main.tex
@@ -425,4 +425,10 @@
   (1) よりこれらも$\mathfrak{S}_n$を生成する.
 \end{ans}
 
+\fakesubsection{2.4 元の位数}
+
+\begin{ans}
+  (1) 12, 144 (2) yes
+\end{ans}
+
 \end{document}
