--- a/main.tex
+++ b/main.tex
@@ -431,4 +431,18 @@
   (1) 12, 144 (2) yes
 \end{ans}
 
+\begin{ans}
+  (1)
+  $395 = 1 \cdot 265 + 130$,
+  $265 = 2 \cdot 130 + 5$,
+  $130 = 26 \cdot 5$.
+  よって$d = 5$.\\
+  (2)
+  $5
+  = 265 - 2\cdot 130
+  = 265 - 2 \cdot (395 - 1 \cdot 265)
+  = -2 \cdot 395 + 3 \cdot 265$.
+  よって$(x, y) = (-2, 3)$が$1$つの解である.
+\end{ans}
+
 \end{document}
