--- a/main.tex
+++ b/main.tex
@@ -439,10 +439,21 @@
   よって$d = 5$.\\
   (2)
   $5
-  = 265 - 2\cdot 130
+  = 265 - 2 \cdot 130
   = 265 - 2 \cdot (395 - 1 \cdot 265)
   = -2 \cdot 395 + 3 \cdot 265$.
   よって$(x, y) = (-2, 3)$が$1$つの解である.
+\end{ans}
+
+\begin{ans}
+  (1) 位数が少ないので単純に総当りで調べる.
+  $\overline{2}^{-1} = \overline{4}$,
+  $\overline{3}^{-1} = \overline{5}$,
+  $\overline{4}^{-1} = \overline{2}$,
+  $\overline{5}^{-1} = \overline{3}$,
+  $\overline{6}^{-1} = \overline{6}$.\\
+  (2) $284x + 3y = 1$の$1$つの解をユークリッドの互除法によって求めると,
+  $(x, y) = (-1, 95)$となる. よって$\overline{3}^{-1} = \overline{95}$.
 \end{ans}
 
 \end{document}
