--- a/main.tex
+++ b/main.tex
@@ -456,4 +456,9 @@
   $(x, y) = (-1, 95)$となる. よって$\overline{3}^{-1} = \overline{95}$.
 \end{ans}
 
+\begin{ans}
+  $1,..., p^n$のうち$p^n$と互いに素でないのは$p$の倍数で, $p^{n-1}$個ある.
+  よって位数は$p^n - p^{n-1}$.
+\end{ans}
+
 \end{document}
