--- a/main.tex
+++ b/main.tex
@@ -461,4 +461,11 @@
   よって位数は$p^n - p^{n-1}$.
 \end{ans}
 
+\begin{ans}
+  $x^{35d} = 1$であることと$35d$が$60$の倍数であることは同値.
+  さらにこのことは$7d$が$12$の倍数であることと同値.
+  $7$と$12$は互いに素なので, これは$d$が$12$の倍数であることと同値である.
+  よって位数は$12$.
+\end{ans}
+
 \end{document}
