--- a/main.tex
+++ b/main.tex
@@ -468,4 +468,11 @@
   よって位数は$12$.
 \end{ans}
 
+\begin{ans}
+  $x^{nm} = 1$であることと$nm$が$d$の倍数であることは同値.
+  さらにこのことは$nm/\gcd(n, d)$が$d/\gcd(n, d)$の倍数であることと同値.
+  $n/\gcd(n, d)$と$d/\gcd(n, d)$は互いに素なので, これは$m$が$d/\gcd(n, d)$の倍数であることと同値である.
+  よって位数は$d/\gcd(n, d)$.
+\end{ans}
+
 \end{document}
