--- a/main.tex
+++ b/main.tex
@@ -475,4 +475,13 @@
   よって位数は$d/\gcd(n, d)$.
 \end{ans}
 
+\begin{ans}
+  位数$d$の群$G$を生成する元の位数は$d$である.
+  前問より$\overline{n}$の位数は$d/\gcd(d, n)$であるから,
+  $d$と互いに素であるような$n$についての$\overline{n}$を挙げればよい.
+  たとえば$\mathbb{Z}/15\mathbb{Z}$では
+  $\overline{1}, \overline{2}, \overline{4}, \overline{7}, \overline{8}, \overline{11}, \overline{13}, \overline{14}$.
+  他も同様.
+\end{ans}
+
 \end{document}
