--- a/main.tex
+++ b/main.tex
@@ -539,4 +539,10 @@
   \end{pmatrix}$.
 \end{ans}
 
+\begin{ans}
+  (1) $a^n = 1, b^m = 1$ならば, $(ab)^{nm} = a^{nm}b^{nm} = 1$.
+  (2) $1$の位数は$0$なので$1 \in H$.
+  また$x$の位数は$x^{-1}$の位数に等しいので, $x \in H$ならば$x^{-1} \in H$.
+\end{ans}
+
 \end{document}
