--- a/main.tex
+++ b/main.tex
@@ -545,4 +545,21 @@
   また$x$の位数は$x^{-1}$の位数に等しいので, $x \in H$ならば$x^{-1} \in H$.
 \end{ans}
 
+\fakesubsection{2.5 準同型と同型}
+
+\begin{ans}
+  (1) 「…」が成り立つとする.
+  $i_1 = m, i_2 = 0$とすると, $x^{i_1} = x^{i_2} = 1$.
+  よって$y^{i_1} = y^{i_2}$, すなわち$y^m = 1$.
+  命題2.4.18より, $m$は$n$の倍数である.
+  逆に, $m$が$n$の倍数であるとする.
+  $x^{i_1} = x^{i_2}$であるような任意の$i_1, i_2 \in \mathbb{Z}$に対して,
+  $i_1 - i_2$は命題2.4.18より$m$の倍数であり, 仮定からこれは$n$の倍数でもある.
+  よって$y^{i_1 - i_2} = 1$, すなわち$y^{i_1} = y^{i_2}$であるから, 「…」が成り立つ.
+  以上により, 「…」が成り立つための必要十分条件は, $m$が$n$の倍数であることである.\\
+  (2) $m$, $n$が (1) の性質を満たすことから, $\phi(x^i) = y^i$と定めると$\phi$はwell-definedである.
+  $\phi(x^ix^j) = \phi(x^{i+j}) = y^{i+j} = y^iy^j = \phi(x^i)\phi(x^j)$
+  より, $\phi$は準同型.
+\end{ans}
+
 \end{document}
