--- a/main.tex
+++ b/main.tex
@@ -566,4 +566,12 @@
   $\phi_n(gh) = (gh)^n = g^nh^n = \phi_n(gh)$.
 \end{ans}
 
+\begin{ans}
+  (1) $g$の位数を$n$とすると,$\phi(g)^n = \phi(g^n) = \phi(1_G) = 1_H$.
+  よって$\phi(g)$の位数は$n$の約数である.
+  (2) $\phi(g)$の位数を$m$とすると, $\phi(g^m) = \phi(g)^m = 1_H$.
+  $\phi$が単射なので, $g^m = 1_G$. よって$g$の位数は$m$の約数である.
+  (1) と合わせて, $g$の位数と$\phi(g)$の位数は等しい.
+\end{ans}
+
 \end{document}
