--- a/main.tex
+++ b/main.tex
@@ -574,4 +574,10 @@
   (1) と合わせて, $g$の位数と$\phi(g)$の位数は等しい.
 \end{ans}
 
+\begin{ans}
+  $\mathbb{Z}/4\mathbb{Z}$には位数$4$の元があるが,
+  $\mathbb{Z}/2\mathbb{Z} \times \mathbb{Z}/2\mathbb{Z}$にはないので,
+  これらは同型ではない.
+\end{ans}
+
 \end{document}
