--- a/main.tex
+++ b/main.tex
@@ -580,4 +580,13 @@
   これらは同型ではない.
 \end{ans}
 
+\begin{ans}
+  $n \ge 0$の場合を数学的帰納法により示す.
+  $n = 0$の場合は明らかに真である.
+  $n = k$で真であるとすると,
+  $(xyx^{-1})^{k+1} = (xyx^{-1})^k(xyx^{-1}) = (xy^kx^{-1})(xyx^{-1}) = xy^{k+1}x^{-1}$より,
+  $n = k + 1$についても真である.
+  $n < 0$の場合は, $(xyx^{-1})^n = ((xyx^{-1})^{-n})^{-1} = (xy^{-n}x^{-1})^{-1} = xy^nx^{-1}$.
+\end{ans}
+
 \end{document}
