--- a/main.tex
+++ b/main.tex
@@ -589,4 +589,83 @@
   $n < 0$の場合は, $(xyx^{-1})^n = ((xyx^{-1})^{-n})^{-1} = (xy^{-n}x^{-1})^{-1} = xy^nx^{-1}$.
 \end{ans}
 
+\begin{ans}
+  $\begin{pmatrix}
+    a & b \\
+    c & d
+  \end{pmatrix}$を$\mathrm{GL}_2(\mathbb{R})$または$\mathrm{GL}_2(\mathbb{C})$の元として,
+  \[
+    \begin{pmatrix}
+      1 & 1 \\
+      0 & 1
+    \end{pmatrix} = \begin{pmatrix}
+      a & b \\
+      c & d
+    \end{pmatrix} \begin{pmatrix}
+      1 & 0 \\
+      1 & 1
+    \end{pmatrix} \cdot \frac{1}{ad - bc} \begin{pmatrix}
+      d & -b \\
+      -c & a
+    \end{pmatrix} = \frac{1}{ad - bc} \begin{pmatrix}
+      a + b & b \\
+      c + d & d
+    \end{pmatrix} \begin{pmatrix}
+      d & -b \\
+      -c & a
+    \end{pmatrix}
+  \]
+  であるとする. $(2, 1)$成分を比較すると$0 = d^2$であるから, $d = 0$.
+  よって
+  \[
+    \begin{pmatrix}
+      1 & 1 \\
+      0 & 1
+    \end{pmatrix} = - \frac{1}{bc} \begin{pmatrix}
+      a + b & b \\
+      c & 0
+    \end{pmatrix} \begin{pmatrix}
+      0 & -b \\
+      -c & a
+    \end{pmatrix} = - \frac{1}{bc} \begin{pmatrix}
+      -bc & -b^2 \\
+      0 & -bc
+    \end{pmatrix} = \begin{pmatrix}
+      1 & \frac{b}{c} \\
+      0 & 1
+    \end{pmatrix}
+  \]
+  $(1, 2)$成分を比較して$b = c$である.
+  逆に, $d = 0$, $b = c$, $ad - bc \neq 0$となるように$a, b, c, d$を定めれば,
+  \[
+    \begin{pmatrix}
+      1 & 1 \\
+      0 & 1
+    \end{pmatrix} = \begin{pmatrix}
+      a & b \\
+      c & d
+    \end{pmatrix} \begin{pmatrix}
+      1 & 0 \\
+      1 & 1
+    \end{pmatrix} \begin{pmatrix}
+      a & b \\
+      c & d
+    \end{pmatrix}^{-1}
+  \]
+  が成り立つことが確かめられる.
+  したがって$A$, $B$は$\mathrm{GL}_2(\mathbb{R})$では共役である.
+  $d = 0$, $b = c$, $ad - bc \neq 0$という条件のもとで, もし$b \in \mathbb{R}$ならば$
+  \begin{vmatrix}
+    a & b \\
+    c & d
+  \end{vmatrix} = - b^2 < 0
+  $なので, $A$, $B$は$\mathrm{SL}_2(\mathbb{R})$では共役でない.
+  一方$b = i$とすれば$
+  \begin{vmatrix}
+    a & b \\
+    c & d
+  \end{vmatrix} = 1
+  $なので, $\mathrm{SL}_2(\mathbb{C})$では共役である.
+\end{ans}
+
 \end{document}
