--- a/main.tex
+++ b/main.tex
@@ -689,4 +689,10 @@
   $\mathrm{Aut}(G) \cong \mathbb{Z}/2\mathbb{Z} \times \mathbb{Z}/4\mathbb{Z}$.
 \end{ans}
 
+\begin{ans}
+  (1) $b(ab)b^{-1} = ba$.
+  (2) $(ab)^n = 1$ならば$(ba)^n = (b(ab)b^{-1})^n = b(ab)^nb^{-1} = 1$.
+  同様に$(ba)^n = 1$ならば$(ab)^n = 1$なので, $ab$と$ba$の位数は等しい.
+\end{ans}
+
 \end{document}
