--- a/main.tex
+++ b/main.tex
@@ -695,4 +695,17 @@
   同様に$(ba)^n = 1$ならば$(ab)^n = 1$なので, $ab$と$ba$の位数は等しい.
 \end{ans}
 
+\begin{ans}
+  $G$は互換$(1\ 2)$と$(2\ 3)$で生成されるので,
+  $\mathrm{Aut}(G)$の元は$(1\ 2), (2\ 3)$の行き先を定めることで決定できる.
+  これらは位数$2$の元なので, 同型写像による行き先は同じく位数$2$の異なる元でなければならず, 候補は$3$つある.
+  したがって, $\mathrm{Aut}(G)$の位数はたかだか${}_3 \mathrm{P}_2 = 6$である.
+  $G$の位数も$6$なので, $\phi$が単射 ($\mathrm{Ker}(\phi) = \{1\}$) であることを確かめれば, $\phi$が同型であることが分かる.
+  $\sigma \in \mathrm{Ker}(\phi)$ならば, 任意の$\tau \in G$に対して
+  $\sigma \tau \sigma^{-1} = \tau$, すなわち$\sigma$と$\tau$は可換である.
+  互換$(1\ 2)$と可換な元は$1$と$(1\ 2)$のみであることが計算で確かめられ,
+  また$(1\ 3)$についても同様なので, $G$のすべての元と可換であるのは$1$のみである.
+  よって$\sigma = 1$.
+\end{ans}
+
 \end{document}
