--- a/main.tex
+++ b/main.tex
@@ -708,4 +708,18 @@
   よって$\sigma = 1$.
 \end{ans}
 
+\fakesubsection{2.5 準同型と同型}
+
+\begin{ans}
+  同値関係ではない.
+  $\{(x, x) \mid x \in \mathbb{R}\} \subset R$なので, 反射律は満たされている.
+  また
+  $(a, b) \in \{(x, x) \mid x \in \mathbb{R}\}$ならば$(b, a) \in \{(x, x) \mid x \in \mathbb{R}\}$,
+  $(a, b) \in \{(x, 2x) \mid x \in \mathbb{R}\}$ならば$(b, a) \in \{(2x, x) \mid x \in \mathbb{R}\}$,
+  $(a, b) \in \{(2x, x) \mid x \in \mathbb{R}\}$ならば$(b, a) \in \{(x, 2x) \mid x \in \mathbb{R}\}$
+  なので, 対称律も満たされている.
+  しかし, 推移律は満たされていない.
+  たとえば$(1, 2), (2, 4) \in R$であるが$(1, 4) \notin R$.
+\end{ans}
+
 \end{document}
