--- a/main.tex
+++ b/main.tex
@@ -708,7 +708,7 @@
   よって$\sigma = 1$.
 \end{ans}
 
-\fakesubsection{2.5 準同型と同型}
+\fakesubsection{2.6 同値関係と剰余類}
 
 \begin{ans}
   同値関係ではない.
@@ -720,6 +720,12 @@
   なので, 対称律も満たされている.
   しかし, 推移律は満たされていない.
   たとえば$(1, 2), (2, 4) \in R$であるが$(1, 4) \notin R$.
+\end{ans}
+
+\begin{ans}
+  (反射律) $a = 1a1^{-1}$.
+  (対称律) $a = gbg^{-1}$ならば$b = g^{-1}a(g^{-1})^{-1}$.
+  (推移律) $a = gbg^{-1}$, $b = hch^{-1}$ならば$a = g(hch^{-1})g^{-1} = (gh)c(gh)^{-1}$.
 \end{ans}
 
 \end{document}
