--- a/main.tex
+++ b/main.tex
@@ -728,4 +728,8 @@
   (推移律) $a = gbg^{-1}$, $b = hch^{-1}$ならば$a = g(hch^{-1})g^{-1} = (gh)c(gh)^{-1}$.
 \end{ans}
 
+\begin{ans}
+  系2.6.21よりしたがう.
+\end{ans}
+
 \end{document}
