--- a/main.tex
+++ b/main.tex
@@ -732,4 +732,9 @@
   系2.6.21よりしたがう.
 \end{ans}
 
+\begin{ans}
+  $H \cap K$は$H$, $K$の部分群なので$\abs{H \cap K}$は$\abs{H}$と$\abs{K}$の公約数である.
+  よって$\abs{H \cap K} = 1$なので$H \cap K = \{1_G\}$.
+\end{ans}
+
 \end{document}
