--- a/main.tex
+++ b/main.tex
@@ -737,4 +737,15 @@
   よって$\abs{H \cap K} = 1$なので$H \cap K = \{1_G\}$.
 \end{ans}
 
+\fakesubsection{2.7 両側剰余類}
+
+\begin{ans}
+  $\sigma \in G$とする. もし$\sigma(4) = 4$なら, $\sigma \in H$より
+  $\sigma \in H1_GH$である.
+  もし$\sigma(4) = i (i \neq 4)$なら, $\sigma (i\ 3)(3\ 4) \in H$すなわち$\sigma \in H(3\ 4)(i\ 3)$より
+  $\sigma \in H(3\ 4)H$である.
+  以上により, 任意の$\sigma \in G$に対して$\sigma \in H1_GH$または$\sigma \in H(3\ 4)H$が成り立つ.
+  $(3\ 4) \notin H1_GH$より, $\{1_G, (3\ 4)\}$が$1$つの完全代表系である.
+\end{ans}
+
 \end{document}
