--- a/main.tex
+++ b/main.tex
@@ -156,7 +156,7 @@
 \begin{ans}
   線形写像$f:V \rightarrow V$に対してトレース$\tr(f)$を
   $f$の行列表示$M = (m_{ij}) \in M_n(\mathbb{R})$を$1$つとって
-  $\tr(f) = \tr(M) = \Sigma_{i = 1}^n m_{ii}$と定義したいとする.
+  $\tr(f) = \tr(M) = \sum_{i = 1}^n m_{ii}$と定義したいとする.
   このとき, $\tr(f)$がwell-definedであること,
   すなわち行列表示のとり方によらず$\tr(f)$が定まるかどうかが問題となる.
   これがwell-definedであることは, 行列のトレースについて$\tr(AB) = \tr(BA)$が成り立つことを用いて,
@@ -347,7 +347,7 @@
 \begin{ans}
   (1) 明らかに$I_n \in B$.
   $b = (b_{ij}),\ b^\prime = (b^\prime_{ij})$をともにBの元とすると,
-  $bb^\prime$の$(i, j)$成分は$\Sigma_{k = 1}^nb_{ik}b^\prime_{kj}$である.
+  $bb^\prime$の$(i, j)$成分は$\sum_{k = 1}^nb_{ik}b^\prime_{kj}$である.
   もし$i < j$ならば, どんな$k$に対しても$i < k$または$k < j$が成り立つので,
   各項が$0$となり$bb^\prime$の$(i, j)$成分は$0$である. すなわち$bb^\prime \in B$.
   $b \in B$とすると, $b$に
@@ -746,6 +746,54 @@
   $\sigma \in H(3\ 4)H$である.
   以上により, 任意の$\sigma \in G$に対して$\sigma \in H1_GH$または$\sigma \in H(3\ 4)H$が成り立つ.
   $(3\ 4) \notin H1_GH$より, $\{1_G, (3\ 4)\}$が$1$つの完全代表系である.
+\end{ans}
+
+\begin{ans}
+  (1) $g$の第$i_n$行の$c\ (\in \mathbb{R})$倍を第$j\ (> i_n)$行に足すことは, $g$に$B$のある元を左から掛けることに等しい.
+  また, $g$の第$n$列の$c\ (\in \mathbb{R})$倍を第$j\ (< n)$列に足すことは, $g$に$B$のある元を右から掛けることに等しい.
+  したがって, $g$に対してこれらの操作 (行列の基本変形) を適当に繰り返すことによって条件を満たすような$h$に変形することを考えれば,
+  ある$b_1, b_2 \in B$に対して$h = b_1gb_2$が成り立つ.\\
+  (2) (1) において$n$について行った操作を$n-1, n-2,..., 1$について順に行うと,
+  $h = b_1gb_2$で, $h$の各列で$1$箇所だけが$1$で残りの成分はすべて$0$であるようなものがとれる.
+  $h \in \mathrm{GL}_n(\mathbb{R})$なので, 各列で成分が$1$である行はすべて異なる.
+  すなわち$h$は置換行列である.\\
+  (3) $P_\sigma$の$(i, j)$成分が$\delta_{i\sigma(j)}$であることと,
+  $j \neq n$ならば$b_{2, jn} = 0$であることから,
+  \begin{align*}
+    (b_1 P_\sigma b_2)_{in} &= \sum_{j, k}b_{ij}\delta_{j\sigma(k)}b_{2, kn} \\
+    &= \sum_kb_{i\sigma(k)}b_{2, kn} \\
+    &= b_{i\sigma(n)}b_{2, nn} \\
+  \end{align*}
+  ここで$i = \sigma(n)$とすると, (右辺) $\neq 0$であるが,
+  これが$P_\tau$の$(\sigma(n), n)$成分 ($= \delta_{\sigma(n)\tau(n)}$) に等しいので,
+  $\sigma(n) = \tau(n)$である.\\
+  (4) (前半) (3) の式で$i \neq \sigma(n)$の場合を考えると,
+  (右辺) $= 0$かつ$b_{2, nn} \neq 0$であるから$b_{1, i\sigma(n)} = 0$.\\
+  (後半) 明らかに$P_\nu b_1 P_\nu^{-1}$は正則なので,
+  その$(i, j)$成分が$i < j$のとき$0$であることを示せばよい.
+  \begin{align*}
+    (P_\nu b_1 P_\nu^{-1})_{ij} &= \sum_{k, l}P_{\nu, ik}b_{1, kl}(P_\nu^{-1})_{lj} \\
+    &= \sum_{k, l}\delta_{i\nu(k)}b_{1, kl}\delta_{\nu(l)j} \\
+    &= b_{1, \nu^{-1}(i)\nu^{-1}(j)}
+  \end{align*}
+  $\nu$の定め方から, $i < j$かつ$\nu^{-1}(i) > \nu^{-1}(j)$が成り立つのは$j = n$のときだけであり,
+  このとき$\nu^{-1}(j) = \nu^{-1}(n) = \sigma(n)$.
+  よって(4)より$j = n$のときも上式右辺は$0$である.\\
+  (5) (3) の式で, $n$を$n-1$に置き換えたものを考えると,
+  \begin{align*}
+    (b_1 P_\sigma b_2)_{i(n-1)} &= \sum_{j, k}b_{1, ij}\delta_{j\sigma(k)}b_{2, k(n-1)} \\
+    &= \sum_kb_{1, i\sigma(k)}b_{2, k(n-1)} \\
+    &= b_{1, i\sigma(n-1)}b_{2, (n-1)(n-1)} + b_{1, i\sigma(n)}b_{2, n(n-1)} \\
+  \end{align*}
+  まず$i = \sigma(n-1)$とすると, (4) の前半より右辺第$2$項は$0$である.
+  第$1$項$\neq 0$であるから右辺は全体として$\neq 0$であり,
+  これが$P_\tau$の$(\sigma(n-1), n-1)$成分なので,
+  (3)と同様に$\sigma(n-1) = \tau(n-1)$である.
+  また, $i \neq \sigma(n-1), \sigma(n)$ならば, (4) の前半と同様にして$b_{1, i\sigma(n-1)} = 0$.
+  以下同様に (3) の式で$n$を$n-2, n-3,..., 1$に置き換えたものを順に考えれば,
+  $\sigma(n-2) = \tau(n-2),\ \sigma(n-3) = \tau(n-3),..., \sigma(1) = \tau(1)$が示せる.\\
+  (メモ) (1)-(5) より両側剰余類$B\backslash G/B$の完全代表系はすべての置換行列からなる集合であることが分かった.\\
+  (メモ2) (4) の後半を使っていないので, (5) は想定解答ではなさそうな気がする.
 \end{ans}
 
 \end{document}
