--- a/main.tex
+++ b/main.tex
@@ -753,7 +753,7 @@
   また, $g$の第$n$列の$c\ (\in \mathbb{R})$倍を第$j\ (< n)$列に足すことは, $g$に$B$のある元を右から掛けることに等しい.
   したがって, $g$に対してこれらの操作 (行列の基本変形) を適当に繰り返すことによって条件を満たすような$h$に変形することを考えれば,
   ある$b_1, b_2 \in B$に対して$h = b_1gb_2$が成り立つ.\\
-  (2) (1) において$n$について行った操作を$n-1, n-2,..., 1$について順に行うと,
+  (2) (1) において$n$について行った操作を$n-1, n-2,..., 1$について順に行い, さらに適当に対角行列を掛けると,
   $h = b_1gb_2$で, $h$の各列で$1$箇所だけが$1$で残りの成分はすべて$0$であるようなものがとれる.
   $h \in \mathrm{GL}_n(\mathbb{R})$なので, 各列で成分が$1$である行はすべて異なる.
   すなわち$h$は置換行列である.\\
