--- a/main.tex
+++ b/main.tex
@@ -878,4 +878,10 @@
   $ghg^{-1} \in H$.
 \end{ans}
 
+\begin{ans}
+  $h \in H$とする. $g \in H$ならば$ghg^{-1} \in H$は明らか.
+  $g \notin H$ならば, $G = H \sqcup gH = H \sqcup Hg$より, $gH = Hg$すなわち$gHg^{-1} = H$.
+  したがって任意の$g \in G$, $h \in H$に対して$ghg^{-1} \in H$.
+\end{ans}
+
 \end{document}
