--- a/main.tex
+++ b/main.tex
@@ -884,4 +884,13 @@
   したがって任意の$g \in G$, $h \in H$に対して$ghg^{-1} \in H$.
 \end{ans}
 
+\begin{ans}
+  ($N_1N_2$が部分群であること)
+  $1 \in N_1N_2$.
+  $N_1N_2$の任意の$2$つの元$h_1h_2, h_1^\prime h_2^\prime$ ($h_1, h_1^\prime \in N_1$かつ$h_2, h_2^\prime \in N_2$)について
+  $h_1 h_2 h_1^\prime h_2^\prime = h_1 (h_2 h_1^\prime h_2^{-1}) h_2 h_2^\prime \in N_1N_2$.
+  また$N_1N_2$の任意の元$h_1h_2$ ($h_1 \in N_1$, $h_2 \in N_2$)に対して$h_1h_2^{-1}h_1^{-1} \in N_2$より$(h_1h_2)^{-1} = h_2^{-1}h_1^{-1} \in N_1N_2$.\\
+  (正規部分群であること) 任意の$g \in G$に対して$gN_1N_2g^{-1} = (gN_1g^{-1})(gN_2g^{-1}) \subset N_1N_2$.
+\end{ans}
+
 \end{document}
