--- a/main.tex
+++ b/main.tex
@@ -893,4 +893,21 @@
   (正規部分群であること) 任意の$g \in G$に対して$gN_1N_2g^{-1} = (gN_1g^{-1})(gN_2g^{-1}) \subset N_1N_2$.
 \end{ans}
 
+\begin{ans}
+  $\mathfrak{S}_3$の位数は$6$なので, 部分群の位数は$1, 2, 3, 6$のいずれかである.
+  位数$1$の部分群は$\{1\}$, 位数$6$の部分群は$\mathfrak{S}_3$である.
+  $2$と$3$は素数なので, これらに対応する部分群は巡回群のみである.
+  したがって, 部分群は
+  $\{1\}$, $\mathfrak{S}_3$,
+  $\langle(1\ 2)\rangle$, $\langle(2\ 3)\rangle$, $\langle(1\ 3)\rangle$,
+  $\langle(1\ 2\ 3)\rangle$
+  で尽くされる.
+  これらの部分群のうち, $\{1\}$と$\mathfrak{S}_3$は明らかに正規部分群である.
+  また$\langle(1\ 2\ 3)\rangle$は指数$2$の部分群であるから,
+  演習問題2.8.2より正規部分群である.
+  これら以外は正規部分群ではない. 例えば
+  $(2\ 3)(1\ 2)(2\ 3)^{-1} = (1\ 3) \notin \langle(1\ 2)\rangle$
+  より$\langle(1\ 2)\rangle$が正規部分群でないことが分かる. 他も同様.
+\end{ans}
+
 \end{document}
