--- a/main.tex
+++ b/main.tex
@@ -930,4 +930,10 @@
   以上により, $G$の部分群$\{1\}, \gen{-1}, \gen{i}, \gen{j}, \gen{k}, G$はすべて正規部分群である.
 \end{ans}
 
+\fakesubsection{2.9 群の直積}
+
+\begin{ans}
+  容易なので略.
+\end{ans}
+
 \end{document}
