--- a/main.tex
+++ b/main.tex
@@ -936,4 +936,30 @@
   容易なので略.
 \end{ans}
 
+\begin{ans}
+  まず$\phi_1: G_1 \rightarrow G_1$を定める. $g_1 \in G_1$に対して,
+  $\phi(g_1, 1_{G_2}) = (g_1^\prime, g_2^\prime)$であるとする.
+  $(g_1, 1_{G_2})$の位数は$n_1$の約数であり,
+  $\phi(g_1, 1_{G_2}) = (g_1^\prime, g_2^\prime)$の位数は更にその約数であるから,
+  $g_2^\prime$の位数は$n_1$の約数である.
+  一方$G_2$の位数は$n_1$と互いに素であったから,
+  $g_2^\prime$の位数は$1$, すなわち$g_2^\prime = 1_{G_2}$である.
+  そこで$\phi_1(g_1) = g_1^\prime$として$\phi_1: G_1 \rightarrow G_1$を定めれば,
+  $\phi_1$は$\phi(g_1, 1_{G_2}) = (\phi_1(g_1), 1_{G_2})$をみたす.
+  このように定めた$\phi_1$が準同型であることは,
+  $(\phi_1(gh), 1_{G_2})
+  = \phi(gh, 1_{G_2})
+  = \phi(g, 1_{G_2})\phi(h, 1_{G_2})
+  = (\phi_1(g), 1_{G_2})(\phi_1(h), 1_{G_2})
+  = (\phi_1(g)\phi_1(h), 1_{G_2})$
+  からしたがう.
+  同様にして$\phi(1_{G_1}, g_2) = (1_{G_1}, \phi_2(g_2))$をみたす
+  準同型$\phi_2: G_2 \rightarrow G_2$を定めることができる.
+  この$\phi_1, \phi_2$について,
+  $\phi(g_1, g_2)
+  = \phi(g_1, 1_{G_2})\phi(1_{G_1}, g_2)
+  = (\phi_1(g_1), 1_{G_2})(1_{G_1}, \phi_2(g_2))
+  = (\phi_1(g_1), \phi_2(g_2))$.
+\end{ans}
+
 \end{document}
