--- a/main.tex
+++ b/main.tex
@@ -962,4 +962,13 @@
   = (\phi_1(g_1), \phi_2(g_2))$.
 \end{ans}
 
+\begin{ans}
+  (1) $15 = 1 \cdot 8 + 7,\ 8 = 1 \cdot 7 + 1$より,
+  $1 = 8 - 1 \cdot 7 = 8 - (15 - 1 \cdot 8) = - 15 + 2 \cdot 8$.
+  よって$(x, y) = (-1, 2)$が$15x + 8y = 1$の解の$1$つであるから,
+  $15 \cdot (-1) \cdot 5 + 8 \cdot 2 \cdot 2 = -43$.
+  (2) $34 = 6 \cdot 5 + 4,\ 5 = 1 \cdot 4 + 1$より,
+  $1 = 5 - 1 \cdot 4 = 5 - 1 \cdot (34 - 6 \cdot 5) = 34 \cdot (-1) + 5 \cdot 7$
+\end{ans}
+
 \end{document}
