--- a/main.tex
+++ b/main.tex
@@ -964,11 +964,17 @@
 
 \begin{ans}
   (1) $15 = 1 \cdot 8 + 7,\ 8 = 1 \cdot 7 + 1$より,
-  $1 = 8 - 1 \cdot 7 = 8 - (15 - 1 \cdot 8) = - 15 + 2 \cdot 8$.
+  $1 = 8 - 1 \cdot 7 = 8 - 1 \cdot (15 - 1 \cdot 8) = - 15 + 2 \cdot 8$.
   よって$(x, y) = (-1, 2)$が$15x + 8y = 1$の解の$1$つであるから,
   $15 \cdot (-1) \cdot 5 + 8 \cdot 2 \cdot 2 = -43$.
-  (2) $34 = 6 \cdot 5 + 4,\ 5 = 1 \cdot 4 + 1$より,
-  $1 = 5 - 1 \cdot 4 = 5 - 1 \cdot (34 - 6 \cdot 5) = 34 \cdot (-1) + 5 \cdot 7$
+  (2) $35 = 1 \cdot 24 + 11,\ 24 = 2 \cdot 11 + 2,\ 11 = 5 \cdot 2 + 1$より,
+  $1 = 11 - 5 \cdot 2
+  = 11 - 5 \cdot (24 - 2 \cdot 11)
+  = (-5) \cdot 24 + 11 \cdot 11
+  = (-5) \cdot 24 + 11 \cdot (35 - 1 \cdot 24)
+  = 11 \cdot 35 + (-16) \cdot 24$.
+  よって$(x, y) = (11, -16)$が$35x + 24y = 1$の解の$1$つであるから,
+  $35 \cdot 11 \cdot 5 + 24 \cdot (-16) \cdot 4 = 389$.
 \end{ans}
 
 \end{document}
