--- a/main.tex
+++ b/main.tex
@@ -800,7 +800,7 @@
   (メモ2) (4) の後半を使っていないので, (5) は想定解答ではなさそうな気がする.
 \end{ans}
 
-\fakesubsection{正規部分群と剰余群}
+\fakesubsection{2.8 正規部分群と剰余群}
 
 \begin{ans}
   (1) 正規部分群でない. $g = (3\ 4)$, $h = (1\ 2)$とおくと$h \in H$で
@@ -975,6 +975,17 @@
   = 11 \cdot 35 + (-16) \cdot 24$.
   よって$(x, y) = (11, -16)$が$35x + 24y = 1$の解の$1$つであるから,
   $35 \cdot 11 \cdot 5 + 24 \cdot (-16) \cdot 4 = 389$.
+\end{ans}
+
+\fakesubsection{2.10 準同型定理}
+
+\begin{ans}
+  $\phi: G \rightarrow H_2$を$\phi(re^{i\theta}) = r$と定義すると
+  $\phi$は全射準同型であり, $\mathrm{Ker}\phi = H_1$である.
+  したがって準同型定理より$G/H_1 \cong H_2$.
+  また$\psi: G \rightarrow H_1$を$\psi(re^{i\theta}) = e^{i\theta}$と定義すると
+  $\psi$は全射準同型であり, $\mathrm{Ker}\psi = H_2$である.
+  したがって準同型定理より$G/H_2 \cong H_1$.
 \end{ans}
 
 \end{document}
