--- a/main.tex
+++ b/main.tex
@@ -988,4 +988,11 @@
   したがって準同型定理より$G/H_2 \cong H_1$.
 \end{ans}
 
+\begin{ans}
+  $\phi: \mathbb{R} \rightarrow \mathbb{R}/a\mathbb{Z}$を
+  $\phi(x) = ax + a\mathbb{Z}$と定めると, $\phi$は全射準同型で
+  $\mathrm{Ker}\phi = \mathbb{Z}$である. よって準同型定理より
+  $\mathbb{R}/\mathbb{Z} \cong \mathbb{R}/a\mathbb{Z}$.
+\end{ans}
+
 \end{document}
