--- a/main.tex
+++ b/main.tex
@@ -995,4 +995,14 @@
   $\mathbb{R}/\mathbb{Z} \cong \mathbb{R}/a\mathbb{Z}$.
 \end{ans}
 
+\begin{ans}
+  $\phi: G \rightarrow \mathbb{R}^\times$を
+  $\begin{pmatrix}
+    a_{11} & 0 \\
+    a_{21} & a_{22}
+  \end{pmatrix} \mapsto \frac{a_{11}}{a_{22}}$
+  と定義すると, $\phi$は全射準同型で$\mathrm{Ker}\phi = H$であるから,
+  準同型定理より$G/H \cong \mathbb{R}^\times$.
+\end{ans}
+
 \end{document}
