--- a/main.tex
+++ b/main.tex
@@ -1005,4 +1005,11 @@
   準同型定理より$G/H \cong \mathbb{R}^\times$.
 \end{ans}
 
+\begin{ans}
+  $G/H = \{H, x_1 + H, x_2 + H,..., x_{n-1} + H\}$であるとする.
+  これが位数$n$の群をなすことから, $nx_i + H = H$すなわち$nx_i \in H (i = 1,..., n-1)$である.
+  一方, 任意の$x \in G$はある$i$と$h \in H$について$x = x_i + h$と書けるから,
+  $nx = nx_i + nh \in H$. よって$nG \subset H$.
+\end{ans}
+
 \end{document}
