--- a/main.tex
+++ b/main.tex
@@ -1026,4 +1026,12 @@
   したがって, 指数$p$の部分群の数は$p + 1$個である.
 \end{ans}
 
+\begin{ans}
+  中国剰余定理より
+  $G \cong \mathbb{Z}/45\mathbb{Z} \times \mathbb{Z}/3\mathbb{Z} \times \mathbb{Z}/8\mathbb{Z} \times \mathbb{Z}/2\mathbb{Z} \times \mathbb{Z}/7\mathbb{Z}$
+  である. $\mathbb{Z}/45\mathbb{Z}$, $\mathbb{Z}/3\mathbb{Z}$, $\mathbb{Z}/7\mathbb{Z}$において$2$倍写像は全単射なので,
+  $G/2G \cong \mathbb{Z}/2\mathbb{Z} \times \mathbb{Z}/2\mathbb{Z}$である.
+  したがって例題2.10.12と同様にして, $G$の指数$2$の部分群の個数は$3$である.
+\end{ans}
+
 \end{document}
